--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                 <div class="group bg-stone-800 rounded-xl overflow-hidden shadow-xl border border-stone-700 card-hover transition-all duration-300 fade-in-section opacity-0">
                     <div class="relative h-72 overflow-hidden bg-stone-900">
                         <!-- Imagen Genérica de Cartas de Alta Calidad para la vista previa -->
-                        <img src="https://images.unsplash.com/photo-1605429523419-d828c463e5a9?q=80&w=2070&auto=format&fit=crop" 
+                        <img src="Cartas.jpg" 
                              alt="TIPICO Card Game" 
                              class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110">
                         <div class="absolute bottom-0 left-0 w-full bg-gradient-to-t from-stone-900 to-transparent h-20"></div>
@@ -407,3 +407,4 @@
     </script>
 </body>
 </html>
+
